<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="30dip"
    android:background="@drawable/menu_background"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/app_name"
    android:layout_gravity="center"
    android:layout_marginBottom="25dip"
    android:textSize="24.5sp" 
    />
<Button
	android:id="@+id/arcade_button"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/arcade_mode"
	/>
<Button
	android:id="@+id/endurance_button"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/endurance_mode"
	/>
<Button
    android:id="@+id/scores_button"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/scores" 
    />
<Button
	android:id="@+id/help_button"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/help"
	/>
<Button
	android:id="@+id/about_button"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/about"
	/>
<Button
	android:id="@+id/exit_button"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/exit_game"
	/>
</LinearLayout>
